fix: Fix an admin pane whitespace issue on Firefox

--- a/static/css/admin_pane.css
+++ b/static/css/admin_pane.css
@@ -76,7 +76,7 @@ button:hover {
     min-height: 6em;
     padding: .3rem .2rem;
     resize: vertical;
-    white-space: nowrap;
+    white-space: pre;
     width: 100%;
 }
 
